objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dispensing_Pharmacy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dispensing Pharmacy</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Req_Ship_Date__c</fullName>
        <label>Req Ship Date</label>
        <type>Date</type>
    </fields>
    <recordTypes>
        <fullName>Patient</fullName>
        <active>true</active>
        <label>Patient</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pharmacy</fullName>
        <active>true</active>
        <label>Pharmacy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>